versioned_docs/version-2.10/reference/goals/paths.mdx
---
title: paths
description: |
  List the paths between two addresses.
---

import Option from "@site/src/components/reference/Option";
import styles from "@site/src/components/reference/styles.module.css";

---

```
pants paths [args]
```

List the paths between two addresses.

Backend: <span className="color--primary">`pants.backend.project_info`</span>

Config section: <span className="color--primary">`[paths]`</span>

<span className={styles.options}>

## Basic options

### `output_file`

<Option
  cli_repr={`--paths-output-file=<path>`}
  env_repr='PANTS_PATHS_OUTPUT_FILE'
  toml_repr={`[paths]
output_file = <path>`}
  default_repr={`None`}
>

Output the goal&#x27;s stdout to this file. If unspecified, outputs to stdout.

</Option>

### `frm`

<Option
  cli_repr={`--paths-from=<str>`}
  env_repr='PANTS_PATHS_FRM'
  toml_repr={`[paths]
frm = <str>`}
  default_repr={`None`}
>

The path starting address

</Option>

### `to`

<Option
  cli_repr={`--paths-to=<str>`}
  env_repr='PANTS_PATHS_TO'
  toml_repr={`[paths]
to = <str>`}
  default_repr={`None`}
>

The path end address

</Option>

## Advanced options

None

## Deprecated options

None

## Related subsystems

None

</span>
